{
    "name": "ControlMap",
    "maps": [
        {
            "name": "MouseMap",
            "id": "0a97937b-0ea6-4d2b-af33-66be659d6d77",
            "actions": [
                {
                    "name": "RightClickAction",
                    "type": "Button",
                    "id": "6e71c8d6-e7cc-4749-9f4d-083d12a1661d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClickAction",
                    "type": "Button",
                    "id": "6a774b36-2c09-42f1-b9f7-35bd8b495f69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleClickAction",
                    "type": "Button",
                    "id": "dc3b0a83-d2a2-458c-b650-e320899e4f70",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "47784cf6-7fb1-4cf6-b190-d7a3b6e1f7f9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e72707b0-04b1-40ec-ab69-2c8648e427b5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClickAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4be665f-41c1-4275-a640-83b503c2c043",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClickAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22414a68-2dfc-4a87-85ca-179c99568d5e",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleClickAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83d1825c-dca6-40aa-bcfd-699c41769fc5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MovimentMap",
            "id": "8345b22b-94b8-45da-a61a-ad404436fec8",
            "actions": [
                {
                    "name": "Direction",
                    "type": "Value",
                    "id": "cd4491f9-121e-4839-afc7-47c9adfd9c0d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "c77ab08b-2942-4141-9f3f-eba60f4dc4d4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7fb74db9-331c-46ed-841d-6027fdb7f603",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3e6584c6-e10e-4314-8911-c78a37f1f919",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c6503882-ae93-4e31-8561-597a5b1e6b7c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c5b4c264-117e-43ac-aa88-b82bae935971",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "KeyboardMap",
            "id": "86e8d7bc-a56f-451d-b33e-02177e76b8cf",
            "actions": [
                {
                    "name": "EPressAction",
                    "type": "Button",
                    "id": "454f8ce8-b918-41c9-a5aa-8a9d0baa522c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bd4d1cef-35d9-41d8-8dee-cc6222667e9e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EPressAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}